--- a/Problems/387字符串中的第一个唯一字符.md
+++ b/Problems/387字符串中的第一个唯一字符.md
@@ -1,12 +1,23 @@
-//
-// Created by 李子 on 2022/1/23.
-//
-
-#include <iostream>
-#include <unordered_map>
-using namespace std;
+# 387.字符串中的第一个唯一字符
+## 题目描述
+给定一个字符串，找到它的第一个不重复的字符，并返回它的索引。如果不存在，则返回 -1。
 
 
+---
+示例：
+
+    > s = "leetcode"
+    > 返回 0
+
+    > s = "loveleetcode"
+    > 返回 2
+ 
+
+提示：你可以假定该字符串只包含小写字母
+
+## 代码
+### C++ Code:
+```cpp
 int firstUniqChar(string s) {
     unordered_map<char,int> cnt;//存储每个字符出现的次数
     for(int i=s.size()-1;i>=0;i--)
@@ -24,7 +35,13 @@ int firstUniqChar(string s) {
     return -1;//若无出现次数为1的元素则返回-1；
 
 }
-int firstUniqChar_o(string s) {
+```
+实际上，并不需要做倒序、find的处理。因为`cnt[s[i]]++` 语句就已经包含了当查找元素不存在时添加的作用。
+第二次遍历不遍历map，而是对字符串字符进行遍历，在map中查找。
+
+**修改后的代码**
+```c++
+int firstUniqChar(string s) {
     unordered_map<char,int> cnt;//存储每个字符出现的次数
     for(int i=s.size()-1;i>=0;i--)
     {
@@ -38,12 +55,4 @@ int firstUniqChar_o(string s) {
     }
     return -1;
 }
-
-
-
-int main()
-{
-    string a="loveleetcode";
-    int ans=firstUniqChar_o(a);
-    return 0;
-}
+```
