--- a/Problems/206反转链表.md
+++ b/Problems/206反转链表.md
@@ -24,10 +24,10 @@ p：记录当前
 ListNode* reverseList(ListNode* head) {
     ListNode* p=head;//当前节点
     ListNode* pre=NULL;//存储前一个
-    ListNode* next=head;//存储后一个
     while(p) {
+        ListNode* next;
         //先更新后一个
-        next=next->next;
+        next=p->next;
         //使当前节点指向前一个节点
         p->next=pre;
         //更新前驱节点为当前节点
