--- a/Problems/19删除链表的倒数第 N 个结点.md
+++ b/Problems/19删除链表的倒数第 N 个结点.md
@@ -16,33 +16,54 @@ https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/
 ## 代码
 ### C++ Code:
 ```cpp
-//11. 盛最多水的容器
-class Solution_11 {
+//19. 删除链表的倒数第 N 个结点
+class Solution {
 public:
-    int maxArea_TLE(vector<int>& height) {
-        int max=0;
-        for(int i =0;i<height.size();i++)
+    ListNode* removeNthFromEnd_1(ListNode* head, int n) {
+        //不是直接删？
+        ListNode* current=head;
+        int cnt=0;
+        while(current)//
         {
-            for(int j=i+1;j<height.size();j++)
-            {   int min=height[i]>height[j]?height[j]:height[i];
-                if((j-i)*min>max)max=(j-i)*min;
-            }
+            current=current->next;
+            cnt++;//计算共有多少个节点
         }
-        return max;
-    }
 
-    int maxArea(vector<int>& height) {
-        int max=0;
-        int i=0;int j=height.size()-1;
-        while(i!=j)
+        int del=cnt-n;//要删除的节点位置
+        if(del==0)return head->next;
+        current=head;
+        while(del-1>0)//移动到前一个时停止
         {
-            int min=height[i]>height[j]?height[j]:height[i];
-            if((j-i)*min>max)max=(j-i)*min;
-            if(height[i]>height[j])j--;
-            else i++;
+            current=current->next;
+            del--;
         }
-        return max;
+
+        //if(!current->next)return  nullptr;//若要被删除的点不存在
+        //else
+        current->next=current->next->next;
+        return head;
+    }
+    ListNode* removeNthFromEnd(ListNode* head, int n) {
+        //快慢指针
+        ListNode* fast=head;
+        ListNode* dummy=new ListNode(0,head);
+        ListNode* slow=dummy;//指向head前一个,可以避免要删除头节点引发的错误
+        //先将fast遍历n个节点，使其与slow相差n个节点。
+        //再同时遍历fast，slow，当fast为空，slow则指向倒数第n个节点
+        for(int i = 0;i<n;i++)
+        {
+            fast=fast->next;
+        }
+        //同时遍历
+        while(fast)//当fast指向最后一个，slow指向要删除的前一个结点
+        {
+            fast=fast->next;
+            slow=slow->next;
+        }
+        slow->next=slow->next->next;
+        ListNode* ans=dummy->next;
+        delete dummy;
+        return ans;
     }
 };
-
 ```
