--- a/Problems/19删除链表的倒数第 N 个结点.md
+++ b/Problems/19删除链表的倒数第 N 个结点.md
@@ -9,7 +9,7 @@ https://leetcode-cn.com/problems/remove-nth-node-from-end-of-list/
 
 更为快速有效的方法：
 1. 用栈存储，当找到被删除的节点时，栈顶即为其前一个
-2. 快慢指针，一个指针始终快一步
+2. 快慢指针，一个指针始终快n步,当快指针到达末尾，慢指针指向要删除的那个值前一位
 
 
 
