--- a/Problems/31下一个排列.md
+++ b/Problems/31下一个排列.md
@@ -6,14 +6,71 @@ https://leetcode-cn.com/problems/next-permutation/
 
 ## 思路
 
-    //双指针 left指向最后一位right指向前一位
-    //将left插入到前面最近的一个小于于它的数的位置，并将此后的数全部后移
-    //当right<0，则left前移一位,right为其前一位
-    //当left=0,
+双指针 left指向最后一位right指向前一位
+
+将left指向的数与最近的一个小于于它的数交换位置，并将此后的数升序排列
+
+当right<0，则left前移一位,right为其前一位
+
+当left=0,还没有结束说明已为最大
+    
+>然而这种方法对于*4202320*这种情况是不成立的。
+
+正确思路：
+
+    双指针 left指向最后一位right指向前一位
+
+    从后往前找一个相邻顺序对,left为较小的那个数
+
+    找到后开始从后往前找一个大于left的数，此时这个数为要与left交换的数
+
+    交换后，将left后面的数顺序排列（且可以证明后面的数原本为逆序排列，可以直接双指针交换)
 
 ---
 ## 代码
 ### C++ Code:
 ```cpp
-
+//21 下一个排列
+void nextPermutation(vector<int>& nums) {
+    //双指针 left指向最后一位right指向前一位
+    //从后往前找一个相邻顺序对,left为较小的那个数
+    //找到后开始从后往前找一个大于left的数，此时这个数为要与left交换的数
+    //交换后，将left后面的数顺序排列（且可以证明后面的数原本为逆序排列，可以直接双指针交换)
+    if(nums.size()<=1)return;//size小于=1，不做处理
+    vector<int>::iterator right=nums.end()-1;
+    vector<int>::iterator left=right-1;//right的左边
+    while(1)
+    {
+            if(*left<*right)
+            {
+                //此时*left为较小数
+                //再从后往前找一个较大数
+                right=nums.end()-1;
+                while(right>left)
+                {
+                    if(*right>*left){swap(*left,*right);break;}
+                    right--;
+                }
+                //再将交换后的数升序排列
+                sort(left+1,nums.end());//end不是最后一个元素为什么sort不需要-1？sort区间是前闭后开
+                return;
+            }
+            if(left==nums.begin())break;
+            left--;
+            right--;
+    }
+    //left=0
+    //逆置整个数组
+    //双指针，首尾交换
+    left=nums.begin();
+    right=nums.end()-1;
+    while(left<=right)
+    {
+        //交换两个数
+        swap(*left,*right);
+        left++;
+        right--;
+    }
+    return;
+}
 ```
